4933 - removed unnecessary css top property calls to fix select lookup component alignment

--- a/src/components/searchfield/_searchfield-new.scss
+++ b/src/components/searchfield/_searchfield-new.scss
@@ -50,9 +50,6 @@
       padding-top: 6px;
     }
 
-    .icon.close {
-      top: 12px;
-    }
   }
 
   &:not(.is-open) {
@@ -61,19 +58,6 @@
     }
   }
 
-  &.has-text .icon.close {
-    top: 11px;
-  }
-}
-
-.toolbar-searchfield-wrapper {
-  &.searchfield-wrapper {
-    &.non-collapsible {
-      svg.icon {
-        top: 11px;
-      }
-    }
-  }
 }
 
 // Firefox needs some help
